--- a/package.json
+++ b/package.json
@@ -10,15 +10,29 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/stack": "^6.2.2",
     "expo": "~45.0.0",
+    "expo-secure-store": "^11.2.0",
     "expo-status-bar": "~1.3.0",
+    "formik": "^2.2.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-web": "0.17.7",
+    "tailwind-rn": "^4.2.0",
+    "twrnc": "^3.3.3",
+    "validatorjs": "^3.22.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "concurrently": "^7.2.2",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.4"
   },
   "private": true
 }
